Adds footer and styles

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         </div>
         
       </div>
+      <footer class="footer-container">
+        <p><small>&copy; 2021 by <a href="#">Contact Lylla Sipaseuth </a>, All Rights Reserved ~ <a href="https://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~ <a href="https://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a></small></p>
+      </footer>
         <script>
           //changed to var to make spans available globally
           var spans = document.querySelectorAll("#clickSpans span");
